# selfa-inverter-query

./: .gitignore  LICENSE  README.md  hacs.json  main.py  mqtt_publisher.py  pyproject.toml  selfa.py  stdout_publisher.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yaml
app/: hass_publisher.py  influxdb2x_publisher.py  main.py  mqtt_publisher.py  selfa.py  selfa_crypt.py
custom_components/selfa/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  select.py  sensor.py  switch.py
custom_components/selfa/translations/: en.json
docker/: Dockerfile
scripts/: modbus_test.py
tests/: conftest.py  test_coordinator.py  test_crypt.py
