[project]
name = "selfa-mqtt"
version = "0.1.0"
description = "Unofficial selfa API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coloredlogs>=15.0.1",
    "colorlog>=6.9.0",
    "configparser>=7.2.0",
    "flatten-json>=0.1.14",
    "influxdb-client>=1.49.0",
    "jinja2>=3.1.6",
    "paho-mqtt>=2.1.0",
    "requests>=2.32.3",
]
